--- a/src/icons/layout/_menu.scss
+++ b/src/icons/layout/_menu.scss
@@ -108,6 +108,11 @@ $_layoutCommonMenus: (
     .menupopup-arrowscrollbox {
       padding-inline: 0 !important; /* Original: padding: var(--panel-padding); --panel-padding-block: 4px; */
     }
+
+    // FF v141 #1128
+    menupopup[needsgutter] > :is(menu, menuitem) > .menu-icon {
+      display: none !important;
+    }
   }
 }
 
